# mkdocs-enumerate-and-reference

./: .actrc  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE.txt  README.md  index.html  pyproject.toml
.github/workflows/: tests.yml
docs/: mkdocs.yml
docs/docs/: getting started.md  index.md
docs/docs/demo/: demo1.md  demo_bis.md
docs/site/: 404.html  index.html
docs/site/getting started/: index.html
getting started/: index.html
mkdocs_enumerate_and_reference/: enumerate.py  plugin.py  reference.py
search/: search_index.json
tests/: build_test.py  conftest.py  dev_test.py  enumerate_test.py
tests/fixtures/demo/: mkdocs.yml
tests/fixtures/demo/docs/: index.md
tests/fixtures/demo/docs/demo/: section_1.md  section_2.md  section_4.md
