[tool.poetry]
name = "mkdocs-enumerate-and-reference"
version = "0.1.0"
description = "Mkdocs plugin for numbering and referencing"
authors = ["Raphaël Mammeri <raphael.mammeri@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.5.3"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"
commitizen = "^3.25.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."mkdocs.plugins"]
"enumerate-and-reference" = "mkdocs_enumerate_and_reference.plugin:EnumerateAndReference"